feat(vehicles): get garage vehicle detail
